added photos to projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,11 +100,11 @@
         <section class="projects">
             <div class="proj">
                 <div id="image" class="image left">
-                    <img class="imageClass" src="orangeimg.png" alt="" />
+                    <img class="imageClass" src="images/new.png" alt="" />
                 </div>
                 <div id="text" class="text right">
-                    <h3>Haziqsamuri.com</h3>
                     <div class="text-box-content">
+                            <h3>Haziqsamuri.com</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -119,11 +119,11 @@
             </div>
             <div class="proj">
                 <div class="image right">
-                    <img class="imageClass" src="orangeimg.png" alt="" />
+                    <img class="imageClass" src="images/edutext.png" alt="" />
                 </div>
                 <div class="text left">
-                    <h3>University of Melbourne</h3>
                     <div class="text-box-content">
+                            <h3>University of Melbourne</h3>
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua.</p>
                         <a class="button" href="#" target="_blank">view project</a>
@@ -133,13 +133,12 @@
             </div>
             <div class="proj">
                 <div class="image left">
-                    <img class="imageClass" src="orangeimg.png" alt="" />
+                    <img class="imageClass" src="images/openaid.png" alt="" />
                 </div>
                 <div class="text right">
-                    <h3>University of Melbourne</h3>
                     <div class="text-box-content">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua.</p>
+                            <h3>OpenAid</h3>
+                        <p>Web App designed to improve the link between Aid workers and communities in need.</p>
                         <a class="button" href="#" target="_blank">view project</a>
                         <a class="button" href="#" target="_blank">view Source Code</a>
                     </div>
@@ -147,13 +146,12 @@
             </div>
             <div class="proj">
                 <div class="image right">
-                    <img class="imageClass" src="orangeimg.png" alt="" />
+                    <img class="imageClass" src="images/new.png" alt="" />
                 </div>
                 <div class="text left">
-                    <h3>OpenAid</h3>
                     <div class="text-box-content">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua.</p>
+                            <h3>OpenAid</h3>
+                        <p>Web App designed to improve the link between Aid workers and communities in need.</p>
                         <a class="button" href="#" target="_blank">view project</a>
                         <a class="button" href="#" target="_blank">view Source Code</a>
                     </div>
