almost ready, need to add github and email button and finish filling in details

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,12 @@
             <div class="headerInfo">
                 Junior Developer
             </div>
+            <img src="images/email.jpg"  href="mailto:m.haziq.samuri@gmail.com">
         </section>
 
 
         <section class="about">
-            <div class="divider">About Me</div>
+            <div class="about-subheader subheader">About Me</div>
             <div class="about-content">
 
                 <p class="para">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -98,49 +99,92 @@
             </div>
         </section>
         <section class="projects">
+            <div class="projects-subheader subheader"> Projects</div>
             <div class="proj">
-                <div id="image" class="image left">
-                    <img class="imageClass" src="images/new.png" alt="" />
-                </div>
-                <div id="text" class="text right">
-                    <div class="text-box-content">
-                            <h3>Haziqsamuri.com</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <a class="button-git" href="#" target="_blank"></a>
-                        <a class="button-site" href="#" target="_blank"></a>
-
-                    </div>
-                </div>
-            </div>
-            <div class="proj">
-                <div class="image right">
+                <div class="image left">
                     <img class="imageClass" src="images/edutext.png" alt="" />
                 </div>
-                <div class="text left">
+                <div class="text right">
                     <div class="text-box-content">
-                            <h3>University of Melbourne</h3>
+                        <h3>EduText</h3>
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="button" href="#" target="_blank">view project</a>
-                        <a class="button" href="#" target="_blank">view Source Code</a>
+                        <table>
+                            <tr>
+                                <th>Implements:&nbsp&nbsp</th>
+                                <th>JavaScript</th>
+                                <th>node.js</th>
+                                <th>MongoDB</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>React</th>
+                                <th>express</th>
+                                <th>noSQL</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>CSS</th>
+                                <th>BootStrap</th>
+                                <th>SCSS/SCSS</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>HTML</th>
+                                <th>Heroku</th>
+                                <th>Twilio SMS API</th>
+                            </tr>
+
+                        </table>
+                    </div>
+
+                    <div class="button-container">
+                        <a class="button" href="https://protected-springs-22222.herokuapp.com/?fbclid=IwAR1hGg4yBpUUwAmGLMsv3jgJAJXrwxYXyhJXMliCo8wM5xhhPYlrVpnVIJo"
+                            target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
+                        <a class="button" href="#" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
+            <div class="proj">
+                    <div id="image" class="image right">
+                        <img class="imageClass" src="images/new.png" alt="" />
+                    </div>
+                    <div id="text" class="text left">
+                        <div class="text-box-content">
+                            <h3>Haziqsamuri.com</h3>
+                            <p>Responsive Portfolio Website showcasing my skillset and previous projects completed.</p>
+                            <table>
+                                <tr>
+                                    <th>Implements:&nbsp&nbsp</th>
+                                    <th>HTML</th>
+                                </tr>
+                                <tr>
+                                    <th></th>
+                                    <th>CSS (CSS Grid)</th>
+                                </tr>
+    
+                            </table>
+    
+                        </div>
+                        <div class="button-container">
+                            <a class="button" href="#" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
+                            <a class="button" href="#" target="_blank">Source Code</a>
+                        </div>
+                    </div>
+                </div>
             <div class="proj">
                 <div class="image left">
                     <img class="imageClass" src="images/openaid.png" alt="" />
                 </div>
                 <div class="text right">
                     <div class="text-box-content">
-                            <h3>OpenAid</h3>
-                        <p>Web App designed to improve the link between Aid workers and communities in need.</p>
-                        <a class="button" href="#" target="_blank">view project</a>
-                        <a class="button" href="#" target="_blank">view Source Code</a>
+                        <h3>OpenAid</h3>
+                        <p>Web App designed to improve the link between Aid workers and communities in need.
+                            Group project done as part of a 24 hour hackathon; CodeBrew.</p>
+                    </div>
+                    <div class="button-container">
+                        <a class="button" href="#" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
+                        <a class="button" href="#" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
@@ -150,10 +194,12 @@
                 </div>
                 <div class="text left">
                     <div class="text-box-content">
-                            <h3>OpenAid</h3>
-                        <p>Web App designed to improve the link between Aid workers and communities in need.</p>
-                        <a class="button" href="#" target="_blank">view project</a>
-                        <a class="button" href="#" target="_blank">view Source Code</a>
+                        <h3>Beam</h3>
+                        <p>- Android app that implements AR (Augmented Reality) to locate an acquaintance using the
+                            phone’s camera and acquaintance’s location</p>
+                    </div>
+                    <div class="button-container">
+                        <a class="button" href="#" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
