testing to go live

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,11 @@
             <div class="headerInfo">
                 Junior Developer
             </div>
-            <img src="images/email.jpg"  href="mailto:m.haziq.samuri@gmail.com">
+            <div class="links-container">
+                <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
+                <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
+            </div>
+
         </section>
 
 
@@ -19,12 +23,14 @@
             <div class="about-subheader subheader">About Me</div>
             <div class="about-content">
 
-                <p class="para">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p class="para">My love for Computer Science and Software Development stems from a need to understand 
+                    the world and everything around me. From a young age, I was always interest in puzzles, building 
+                    things and solving logical problems. This makes me a natural fit as a developer as I love to challenge 
+                    myself as well as my great teamwork and interpersonal skills. I am always interested in keeping up 
+                    with the latest technologies, whether it be mobile development, cryptocurrency or the Internet of 
+                    Things. Outside the tech world, I am an avid traveller, sports fan and adventurer. 
+
+                </p>
 
 
 
@@ -36,7 +42,7 @@
                     Education
                 </div>
                 <div class="educontainer">
-                    <img class="unimelb" src="unimelb.jpg">
+                    <img class="unimelb" src="images/unimelb.jpg">
 
                     <p class="educ"><span class="uni">The University of Melbourne</span>
                         <span>Bachelor of Science</span>
@@ -72,27 +78,19 @@
                 <h3> Frameworks and Software</h3>
                 <table class="frameworks-table">
                     <tr>
-                        <th></th>
                         <th>Git</th>
-                        <th></th>
                         <th>Node.js</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <th>React</th>
-                        <th></th>
                         <th>express</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <th>UNIX</th>
-                        <th></th>
                         <th>Agile Development</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <th>Zenhub</th>
-                        <th></th>
                         <th>Slack</th>
                     </tr>
                 </table>
@@ -104,36 +102,37 @@
                 <div class="image left">
                     <img class="imageClass" src="images/edutext.png" alt="" />
                 </div>
-                <div class="text right">
+                <div class="text right edutext">
                     <div class="text-box-content">
                         <h3>EduText</h3>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Responsive Web App designed to allow students to send in questions and have them answered by
+                            tutors. EduText allows users to submit questions via the web app and via SMS so students
+                            without
+                            access to the internet are still able to ask questions.
+                        </p>
                         <table>
                             <tr>
                                 <th>Implements:&nbsp&nbsp</th>
                                 <th>JavaScript</th>
                                 <th>node.js</th>
                                 <th>MongoDB</th>
+                                <th>HTML</th>
                             </tr>
                             <tr>
                                 <th></th>
-                                <th>React</th>
+                                <th>ReactJS</th>
                                 <th>express</th>
                                 <th>noSQL</th>
+                                <th>Heroku</th>
                             </tr>
                             <tr>
                                 <th></th>
                                 <th>CSS</th>
                                 <th>BootStrap</th>
                                 <th>SCSS/SCSS</th>
+                                <th>Twilio API</th>
                             </tr>
-                            <tr>
-                                <th></th>
-                                <th>HTML</th>
-                                <th>Heroku</th>
-                                <th>Twilio SMS API</th>
-                            </tr>
+
 
                         </table>
                     </div>
@@ -141,37 +140,42 @@
                     <div class="button-container">
                         <a class="button" href="https://protected-springs-22222.herokuapp.com/?fbclid=IwAR1hGg4yBpUUwAmGLMsv3jgJAJXrwxYXyhJXMliCo8wM5xhhPYlrVpnVIJo"
                             target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
-                        <a class="button" href="#" target="_blank">Source Code</a>
+                        <a class="button" href="https://github.com/sheejack/edutext" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
             <div class="proj">
-                    <div id="image" class="image right">
-                        <img class="imageClass" src="images/new.png" alt="" />
+                <div id="image" class="image right">
+                    <img class="imageClass" src="images/portfolio.png" alt="" />
+                </div>
+                <div id="text" class="text left">
+                    <div class="text-box-content">
+                        <h3>Haziqsamuri.com</h3>
+                        <p>Responsive Portfolio Website showcasing my skillset and previous projects completed.</p>
+                        <table>
+                            <tr>
+                                <th>Implements:&nbsp&nbsp</th>
+                                <th>HTML</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>CSS (CSS Grid)</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>Github</th>
+                            </tr>
+
+                        </table>
+
                     </div>
-                    <div id="text" class="text left">
-                        <div class="text-box-content">
-                            <h3>Haziqsamuri.com</h3>
-                            <p>Responsive Portfolio Website showcasing my skillset and previous projects completed.</p>
-                            <table>
-                                <tr>
-                                    <th>Implements:&nbsp&nbsp</th>
-                                    <th>HTML</th>
-                                </tr>
-                                <tr>
-                                    <th></th>
-                                    <th>CSS (CSS Grid)</th>
-                                </tr>
-    
-                            </table>
-    
-                        </div>
-                        <div class="button-container">
-                            <a class="button" href="#" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
-                            <a class="button" href="#" target="_blank">Source Code</a>
-                        </div>
+                    <div class="button-container">
+                        <a class="button" href="http://www.haziqsamuri.com" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
+                        <a class="button" href="https://github.com/msamuri/HaziqSamuriPortfolio" target="_blank">Source
+                            Code</a>
                     </div>
                 </div>
+            </div>
             <div class="proj">
                 <div class="image left">
                     <img class="imageClass" src="images/openaid.png" alt="" />
@@ -181,50 +185,89 @@
                         <h3>OpenAid</h3>
                         <p>Web App designed to improve the link between Aid workers and communities in need.
                             Group project done as part of a 24 hour hackathon; CodeBrew.</p>
+
+                        <table>
+                            <tr>
+                                <th>Implements:&nbsp&nbsp</th>
+                                <th>JavaScript</th>
+                                <th>HTML</th>
+                                <th>Telstra SMS API</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>AngularJS</th>
+                                <th>CSS</th>
+                                <th>Google Maps API</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>node.JS</th>
+                                <th>Firebase</th>
+                            </tr>
+
+                        </table>
                     </div>
+
                     <div class="button-container">
-                        <a class="button" href="#" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
-                        <a class="button" href="#" target="_blank">Source Code</a>
+                        <a class="button" href="https://open-aid-2.firebaseapp.com/?fbclid=IwAR3YoGwzTX08DJzxaODnRbB4N-LyzVm_QwUhUOt9ZUJeMIue6gOCE1GAo_w"
+                            target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
+                        <a class="button" href="https://github.com/AntonSidorov/codebrew-doogle" target="_blank">Source
+                            Code</a>
                     </div>
                 </div>
             </div>
             <div class="proj">
                 <div class="image right">
-                    <img class="imageClass" src="images/new.png" alt="" />
+                    <img class="imageClass" src="images/beam.png" alt="" />
                 </div>
                 <div class="text left">
                     <div class="text-box-content">
                         <h3>Beam</h3>
-                        <p>- Android app that implements AR (Augmented Reality) to locate an acquaintance using the
-                            phone’s camera and acquaintance’s location</p>
+                        <p> Android app that implements AR (Augmented Reality) to locate an acquaintance using the
+                            phone’s camera and acquaintance’s location. Includes chats and friends features</p>
+                        <table>
+                            <tr>
+                                <th>Implements:&nbsp&nbsp</th>
+                                <th>Java</th>
+                                <th>HTML</th>
+                                <th>RESTful API</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>Python</th>
+                                <th>Github</th>
+                                <th>Google Maps API</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>SQL</th>
+                                <th>CSS</th>
+                                <th>Wikitude AR API</th>
+                            </tr>
+
+                        </table>
                     </div>
+
                     <div class="button-container">
-                        <a class="button" href="#" target="_blank">Source Code</a>
+                        <a class="button" href="https://github.com/msamuri/beam" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="contact">
-            <div class="contact-content">
-                <h4>Need a project completed? Email me:<a class="email" href="m.haziq.samuri@gmail.com">m.haziq.samuri@gmail.com</a></h4>
-            </div>
-        </section>
+
         <div class="footer">
             <footer>
                 <div class="footer-content">
                     <p class="credit">
-                        &copy; Haziq Samuri.<br>
+                        &copy; Haziq Samuri 2018<br>
                         Designed and Developed by Haziq Samuri
                     </p>
-                    <ul class="social">
-                        <li>
-                            <a href="#" target="_blank">Github.</a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank">pinterest.</a>
-                        </li>
-                    </ul>
+                </div>
+
+                <div class="links-container2">
+                    <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
+                    <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
                 </div>
             </footer>
         </div>
