fixed some styling errors in non-firefox browsers

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             <div class="about-subheader subheader">About Me</div>
             <div class="about-content">
 
-                <p class="para">My love for Computer Science and Software Development stems from a need to understand 
-                    the world and everything around me. From a young age, I was always interest in puzzles, building 
-                    things and solving logical problems. This makes me a natural fit as a developer as I love to challenge 
-                    myself as well as my great teamwork and interpersonal skills. I am always interested in keeping up 
-                    with the latest technologies, whether it be mobile development, cryptocurrency or the Internet of 
-                    Things. Outside the tech world, I am an avid traveller, sports fan and adventurer. 
+                <p class="para">My love for Computer Science and Software Development stems from a need to understand
+                    the world and everything around me. From a young age, I was always interest in puzzles, building
+                    things and solving logical problems. This makes me a natural fit as a developer as I love to
+                    challenge
+                    myself as well as my great teamwork and interpersonal skills. I am always interested in keeping up
+                    with the latest technologies, whether it be mobile development, cryptocurrency or the Internet of
+                    Things. Outside the tech world, I am an avid traveller, sports fan and adventurer.
 
                 </p>
 
@@ -103,6 +104,7 @@
                     <img class="imageClass" src="images/edutext.png" alt="" />
                 </div>
                 <div class="text right edutext">
+                    <img class="textImg" src="images/text.png">
                     <div class="text-box-content">
                         <h3>EduText</h3>
                         <p>Responsive Web App designed to allow students to send in questions and have them answered by
@@ -149,6 +151,8 @@
                     <img class="imageClass" src="images/portfolio.png" alt="" />
                 </div>
                 <div id="text" class="text left">
+
+                    <img class="textImg" src="images/text.png">
                     <div class="text-box-content">
                         <h3>Haziqsamuri.com</h3>
                         <p>Responsive Portfolio Website showcasing my skillset and previous projects completed.</p>
@@ -181,6 +185,7 @@
                     <img class="imageClass" src="images/openaid.png" alt="" />
                 </div>
                 <div class="text right">
+                    <img class="textImg" src="images/text.png">
                     <div class="text-box-content">
                         <h3>OpenAid</h3>
                         <p>Web App designed to improve the link between Aid workers and communities in need.
@@ -221,6 +226,7 @@
                     <img class="imageClass" src="images/beam.png" alt="" />
                 </div>
                 <div class="text left">
+                    <img class="textImg" src="images/text.png">
                     <div class="text-box-content">
                         <h3>Beam</h3>
                         <p> Android app that implements AR (Augmented Reality) to locate an acquaintance using the
