edits to content

--- a/index.html
+++ b/index.html
@@ -59,20 +59,27 @@
                         <th>Proficient: &nbsp</th>
                         <th>C/C++</th>
                         <th>&nbsp &nbspExperienced: &nbsp</th>
-                        <th>MATLAB</th>
+                        <th>Python</th>
+                        <th>CSS</th>
+                        <th>SQL</th>
                     </tr>
                     <tr>
                         <th></th>
                         <th>Java</th>
                         <th></th>
                         <th>Haskell</th>
+                        <th>HTML</th>
+                        <th>PHP</th>
                     </tr>
-                    <tr>
+                    
                         <th></th>
                         <th>JavaScript</th>
                         <th></th>
                         <th>Prolog</th>
+                        <th>Matlab</th>
+                        <th></th>
                     </tr>
+                    
                 </table>
             </div>
             <div class="frameworks & software">
@@ -81,18 +88,22 @@
                     <tr>
                         <th>Git</th>
                         <th>Node.js</th>
+                        <th>MongoDB</th>
                     </tr>
                     <tr>
-                        <th>React</th>
-                        <th>express</th>
+                        <th>ReactJS</th>
+                        <th>Firebase</th>
+                        <th>Android</th>
                     </tr>
                     <tr>
                         <th>UNIX</th>
                         <th>Agile Development</th>
+                        <th>SASS/SCSS</th>
                     </tr>
                     <tr>
                         <th>Zenhub</th>
-                        <th>Slack</th>
+                        <th>RESTful</th>
+                        <th>Express</th>
                     </tr>
                 </table>
             </div>
