edits to content

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3> Frameworks and Software</h3>
                 <table class="frameworks-table">
                     <tr>
-                        <th>Git</th>
+                        <th>Git (Github)</th>
                         <th>Node.js</th>
                         <th>MongoDB</th>
                     </tr>
