--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <th></th>
                                 <th>CSS</th>
                                 <th>BootStrap</th>
-                                <th>SCSS/SCSS</th>
+                                <th>SASS/SCSS</th>
                                 <th>Twilio API</th>
                             </tr>
 
