added LinkedIn button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 Junior Developer
             </div>
             <div class="links-container">
+                <a class="linkedin-button" href="https://www.linkedin.com/in/haziq-samuri-375743174/" target="_blank"></a>
                 <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
                 <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
             </div>
@@ -72,15 +73,15 @@
                         <th>PHP</th>
                         <th>Haskell</th>
                     </tr>
-                    
-                        <th></th>
-                        <th>JavaScript</th>
-                        <th></th>
-                        <th></th>
-                        <th>Matlab</th>
-                        <th>Prolog</th>
+
+                    <th></th>
+                    <th>JavaScript</th>
+                    <th></th>
+                    <th></th>
+                    <th>Matlab</th>
+                    <th>Prolog</th>
                     </tr>
-                    
+
                 </table>
             </div>
             <div class="frameworks & software">
@@ -284,6 +285,7 @@
                 </div>
 
                 <div class="links-container2">
+                    <a class="linkedin-button" href="https://www.linkedin.com/in/haziq-samuri-375743174/" target="_blank"></a>
                     <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
                     <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
                 </div>
