--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 Junior Developer
             </div>
             <div class="links-container">
-                <a class="linkedin-button" href="https://www.linkedin.com/in/haziq-samuri-375743174/" target="_blank"></a>
+                <a class="linkedin-button" href="www.linkedin.com/in/haziqsamuri" target="_blank"></a>
                 <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
                 <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
             </div>
@@ -285,7 +285,7 @@
                 </div>
 
                 <div class="links-container2">
-                    <a class="linkedin-button" href="https://www.linkedin.com/in/haziq-samuri-375743174/" target="_blank"></a>
+                    <a class="linkedin-button" href="www.linkedin.com/in/haziqsamuri" target="_blank"></a>
                     <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
                     <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
                 </div>
