changed github account name and links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 Junior Developer
             </div>
             <div class="links-container">
-                <a class="linkedin-button" href="www.linkedin.com/in/haziqsamuri" target="_blank"></a>
-                <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
+                <a class="linkedin-button" href="https://www.linkedin.com/in/haziqsamuri" target="_blank"></a>
+                <a class="git-button" href="https://github.com/haziqsamuri" target="_blank"></a>
                 <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
             </div>
 
@@ -188,7 +188,7 @@
                     </div>
                     <div class="button-container">
                         <a class="button" href="http://www.haziqsamuri.com" target="_blank">&nbsp&nbsp&nbsp&nbspProject&nbsp&nbsp&nbsp&nbsp</a>
-                        <a class="button" href="https://github.com/msamuri/HaziqSamuriPortfolio" target="_blank">Source
+                        <a class="button" href="https://github.com/haziqsamuri/HaziqSamuriPortfolio" target="_blank">Source
                             Code</a>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                     </div>
 
                     <div class="button-container">
-                        <a class="button" href="https://github.com/msamuri/beam" target="_blank">Source Code</a>
+                        <a class="button" href="https://github.com/haziqsamuri/beam" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
@@ -285,8 +285,8 @@
                 </div>
 
                 <div class="links-container2">
-                    <a class="linkedin-button" href="www.linkedin.com/in/haziqsamuri" target="_blank"></a>
-                    <a class="git-button" href="https://github.com/msamuri" target="_blank"></a>
+                    <a class="linkedin-button" href="https://www.linkedin.com/in/haziqsamuri" target="_blank"></a>
+                    <a class="git-button" href="https://github.com/haziqsamuri" target="_blank"></a>
                     <a class="email-button" href="mailto:m.haziq.samuri@gmail.com" target="_blank"></a>
                 </div>
             </footer>
