--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="style.css">
-
+<head>
+    <title>Haziq Samuri's Portfolio</title>
+  </head>
 <body class="body">
     <div class="container">
         <section class="header">
