changed to Graduate Developer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 HAZIQ SAMURI
             </div>
             <div class="headerInfo">
-                Junior Developer
+                Graduate Developer
             </div>
             <div class="links-container">
                 <a class="linkedin-button" href="https://www.linkedin.com/in/haziqsamuri" target="_blank"></a>
