pushed some language changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+
 <head>
     <title>Haziq Samuri's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" />
 </head>
+
 <body class="body">
     <div class="container">
         <section class="header">
@@ -83,6 +85,15 @@
                     <th>Matlab</th>
                     <th>Prolog</th>
                     </tr>
+                    </tr>
+
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th>C#</th>
+                    <th></th>
+                    </tr>
 
                 </table>
             </div>
@@ -90,12 +101,12 @@
                 <h3> Frameworks and Software</h3>
                 <table class="frameworks-table">
                     <tr>
-                        <th>Git (Github/GitLab)</th>
+                        <th>React.js</th>
                         <th>Node.js</th>
                         <th>MongoDB</th>
                     </tr>
                     <tr>
-                        <th>ReactJS</th>
+                        <th>Git (Github/GitLab)</th>
                         <th>Firebase</th>
                         <th>Android</th>
                     </tr>
@@ -108,6 +119,11 @@
                         <th>Zenhub</th>
                         <th>RESTful</th>
                         <th>Express</th>
+                    </tr>
+                    <tr>
+                        <th>.NET</th>
+                        <th>Redux.js</th>
+                        <th></th>
                     </tr>
                 </table>
             </div>
